--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
+/* resources/css/app.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .container {
     max-width: 1140px;
     margin: 0 auto;
