Add Adsense script + Refactoring

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,3 +45,30 @@ p {
     line-height: 1.5;
     margin-bottom: 20px;
 }
+
+.country-content a {
+    color: blue !important;
+    text-decoration: underline !important;
+}
+
+.sticky-element,
+.sticky-element>div {
+    transition: all 0.3s ease;
+}
+
+.sticky-element.is-pinned {}
+
+.sticky-element.is-pinned>div {
+    margin-top: 100px;
+}
+
+.sticky-element .country-sub-details {
+    transition: all 0.4s ease-in-out !important;
+    height: 20px;
+}
+
+.sticky-element.is-pinned .country-sub-details {
+    height: 0px;
+    opacity: 0;
+    overflow: hidden;
+}
