--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 .container {
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 h1 {
@@ -38,6 +39,38 @@ h5 {
 
 h6 {
     font-size: 1rem;
+}
+
+@media(max-width: 768px) {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        line-height: 1.2;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.75rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    h5 {
+        font-size: 1.25rem;
+    }
+
+    h6 {
+        font-size: 1rem;
+    }
 }
 
 p {
