--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,14 +19,16 @@ h4,
 h5,
 h6 {
     font-weight: 600 !important;
+    line-height: 1.1;
+    margin-bottom: 15px;
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 h4 {
@@ -53,19 +55,19 @@ h6 {
     }
 
     h2 {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     h3 {
-        font-size: 1.75rem;
-    }
-
-    h4 {
         font-size: 1.5rem;
     }
 
-    h5 {
+    h4 {
         font-size: 1.25rem;
+    }
+
+    h5 {
+        font-size: 1rem;
     }
 
     h6 {
@@ -75,13 +77,17 @@ h6 {
 
 p {
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.4;
     margin-bottom: 20px;
 }
 
 .country-content a {
     color: blue !important;
     text-decoration: underline !important;
+}
+
+.country-content ul {
+    margin-bottom: 20px;
 }
 
 .sticky-element,
