--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,9 +4,10 @@
 @tailwind utilities;
 
 .container {
-    max-width: 1140px;
+    @apply max-w-6xl;
+    /* max-width: 1140px; */
     margin: 0 auto;
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
 
 h1 {
