--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
     @apply max-w-6xl;
     /* max-width: 1140px; */
     margin: 0 auto;
-    /* padding: 0 20px; */
+    padding: 0 20px;
 }
 
 h1 {
